# AFunctionLibrary

./: .gitattributes  .gitmodules  CMakeLists.txt
SDK/AFunctionLibrary/: createtokenapi.h  formatfunctionapi.h  optimizefunctionapi.h
SDK/AFunctionLibrary/APluginSDK/: .gitrepo
SDK/AFunctionLibrary/implementation/: cstring.hpp  cstringtoken.h  cstringtoken.hpp  cstringtokensyntaxtree.hpp  definitions.h  macros.h
SDK/AFunctionLibrary/implementation/createtokenapi/: createtokenapi_definitions.hpp  createtokenapi_private.hpp
SDK/AFunctionLibrary/implementation/formatfunctionapi/: formatfunctionapi_definitions.hpp  formatfunctionapi_private.hpp
SDK/AFunctionLibrary/implementation/include/AFunctionLibrary/: syntaxtree.h  token.h  tokenenums.h  utilites.h  utility.h
SDK/AFunctionLibrary/implementation/include/AFunctionLibrary/implementation/: exports.h  syntaxtree.tpp  token.tpp  tokenaccessinterface.hpp  utilities.ipp  utility.ipp
SDK/AFunctionLibrary/implementation/optimizefunctionapi/: optimizefunctionapi_definitions.hpp  optimizefunctionapi_private.hpp
SDK/AFunctionLibrary/libs/ACUtils/: .gitrepo
SDK/AFunctionLibrary/libs/APluginSDK/: .gitrepo
SDK/AFunctionLibrarySDK/: createaliasesapi.h  createtokenapi.h  formatfunctionapi.h  optimizefunctionapi.h
SDK/AFunctionLibrarySDK/include/AFunctionLibrarySDK/: astringaliases.h  asyntaxtree.h  atoken.h  atokengroup.h  atokennode.h
SDK/AFunctionLibrarySDK/libs/ACUtils/: .gitrepo
SDK/AFunctionLibrarySDK/libs/APluginSDK/: .gitrepo
SDK/AFunctionLibrarySDK/private/: dynarrays.h  macros.h
SDK/AFunctionLibrarySDK/private/c/: macros.h
SDK/AFunctionLibrarySDK/private/cpp/: macros.h
SDK/AFunctionLibrarySDK/private/src/: astringaliases.c  atoken.c  atokengroup.c  atokennode.c
SDK/tests/: CMakeLists.txt
SDK/tests/libs/check/: .gitrepo
SDK/tests/libs/googletest/: .gitrepo
SDK/tests/src/: cstring_test.cpp  cstringtoken_test.cpp  cstringtokenaliases_test.cpp  cstringtokengroup_test.cpp  include.h  test_astringaliases.c  test_astringaliases.cpp  test_atoken.c  test_atokengroup.c  test_atokennode.c  test_cstring.cpp  test_cstringtoken.cpp  test_node.cpp  test_syntaxtree.cpp  test_token.cpp  test_utilities.cpp  testrunner.c
include/AFunctionLibrary/: function.h  syntaxtree.h  token.h  utility.h
include/AFunctionLibrary/implementation/: syntaxtree.tpp  token.tpp  utility.tpp
libs/APluginLibrary/: .gitrepo
libs/APluginLibrary/SDK/APluginSDK/: .gitrepo
libs/pugixml/: .gitrepo
libs/tinydir/: .gitrepo
libs/tinydir/tinydir/: .gitrepo
res/extensions/: tokens.xml
res/plugins/: CMakeLists.txt
res/plugins/src/: createtokensdefault.cpp
src/: function.cpp  syntaxtree.cpp  utility.cpp
src/private/: functionformatter.h  functionoptimizer.h  functionprivate.h  resourcemanager.cpp  resourcemanager.h  resourceparser.cpp  resourceparser.h  resourceparser.tpp  stringtokenmanager.cpp  stringtokenmanager.h  syntaxtreehandler.h  tokenextras.h  tokenextras.tpp  tokenmanager.h
src/private/implementation/: resourceparser.tpp  syntaxtreehandler.tpp  tokenextras.tpp  tokenmanager.tpp
src/private/src/: functionformatter.cpp  functionoptimizer.cpp  functionprivate.cpp  resourcemanager.cpp  resourceparser.cpp  syntaxtreehandler.cpp  tokenextras.cpp  tokenmanager.cpp
tests/: CMakeLists.txt
tests/libs/googletest/: .gitrepo
tests/res/extensions/test/: tokenSample.xml
tests/res/plugins/c_api/: CMakeLists.txt
tests/res/plugins/c_api/src/: main.cpp
tests/res/plugins/cpp_api/: CMakeLists.txt
tests/res/plugins/cpp_api/src/: main.cpp
tests/res/plugins/first/: CMakeLists.txt
tests/res/plugins/first/src/: main.cpp
tests/src/: functionformatter_test.cpp  node_test.cpp  resourcemanager_test.cpp  resourceparser_test.cpp  stringtokenmanager_test.cpp  syntaxtree_test.cpp  test_functionformatter.cpp  test_functionoptimizer.cpp  test_include.h  test_resourcemanager.cpp  test_resourceparser.cpp  test_tokenextras.cpp  test_tokenmanager.cpp  token_test.cpp  tokenextras_test.cpp  tokenmanager_test.cpp  utility_test.cpp
